--- a/themes/workshop/layout/_partial/head.ejs
+++ b/themes/workshop/layout/_partial/head.ejs
@@ -22,26 +22,29 @@
         <meta name="author" content="<%= config.author %>">
     <% } %>
 
-    <!--Open Graph Title-->
-    <% if (page.title){ %>
-        <meta property="og:title" content="<%= page.title %>"/>
-    <% } %>
-
-    <!--Open Graph Site Name-->
-    <meta property="og:site_name" content="<%= config.title %>"/>
-
     <!--Page Cover-->
-    <% if(page.cover) { %>
-        <meta property="og:image" content="<%= page.cover %>" />
-    <% } else if (page.cover_index) { %>
-        <meta property="og:image" content="<%= page.cover_index %>"/>
-    <% } else { %>
-        <meta property="og:image" content="<%= theme.cover %>"/>
-    <% } %>
+    <% var pageImage = ""; %>
+    <% if(is_post() && page.layout === "album") {
+         pageImage = theme.images + page.photos[0];
+     } else {
+         pageImage = "http://images.itsacoyoteworkshop.com/site_assets/og_image.jpg";
+     } %>
+        <%
+            var site_url = url.replace(/index\.html$/, '');
+        %>
+        <%- open_graph({"image": pageImage, "url": site_url}) %>
+        <% if (page.layout !== "album") { %>
+            <meta property="og:image:width" content="600"/>
+            <meta property="og:image:height" content="315"/>
+        <% } %>
+
+        <meta name="twitter:card" content="summary"/>
+        <meta name="twitter:site" content="@itsacoyote"/>
 
     <% if (is_post()) { %>
         <%- googleAmpsCanonical(config, page) %>
     <% } %>
+
 
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
