Added new posts

--- a/themes/workshop/layout/_partial/head.ejs
+++ b/themes/workshop/layout/_partial/head.ejs
@@ -80,5 +80,6 @@
     <title><%= title.join(' - ') %></title>
 
     <%- css('css/style.css') %>
-
+    <!-- Google Analytics -->
+    <%- partial('google-analytics') %>
 </head>
