New blog article

--- a/themes/workshop/layout/_partial/article-index.ejs
+++ b/themes/workshop/layout/_partial/article-index.ejs
@@ -14,8 +14,9 @@
             </div>
             <div class="article-content">
                 <% if (item.excerpt) { %>
-                    Excerpt:
                     <%- item.excerpt %>
+                    <br  />
+                    Read More ...
                         <% }  else { %>
                             <%- item.content %>
                         <% } %>
