--- a/themes/workshop/source/css/_partials/article-index.styl
+++ b/themes/workshop/source/css/_partials/article-index.styl
@@ -27,7 +27,7 @@
         width 100%
         overflow hidden
         margin-bottom 20px
-        
+
         img
             width 100%
 
@@ -64,8 +64,12 @@
                 color #38b7ea
 
     .article-content
+        line-height 1.5em
         margin-top 20px
         color rgba(0,0,0, 0.8)
+
+        img
+            width 100%
 
     .article-meta
         color #797f88
