Change domain name to itsacoyote.design

--- a/themes/workshop/layout/_partial/gallery-page.ejs
+++ b/themes/workshop/layout/_partial/gallery-page.ejs
@@ -29,7 +29,7 @@
   "@type": "NewsArticle",
   "mainEntityOfPage":{
     "@type":"WebPage",
-    "@id":"http://itsacoyoteworkshop.com/<%- item.path %>"
+    "@id":"http://itsacoyote.design/<%- item.path %>"
   },
   "headline": "<%- item.title %>",
   "image": {
@@ -49,7 +49,7 @@
     "name": "Itsacoyote Workshop",
     "logo": {
       "@type": "ImageObject",
-      "url": "http://images.itsacoyoteworkshop.com/site_assets/itsacoyoteworkshop-logo.png",
+      "url": "http://itsacoyote.design/site_assets/itsacoyoteworkshop-logo.png",
             "width": 290,
             "height": 60
     }
