--- a/themes/workshop/source/css/style.styl
+++ b/themes/workshop/source/css/style.styl
@@ -24,7 +24,7 @@
 @import "_partials/pagination"
 
 html
-    background url(http://images.itsacoyoteworkshop.com/site_assets/cork_2.jpg) top left repeat
+    background url(http://itsacoyote.design/site_assets/cork_2.jpg) top left repeat
 
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"]
