--- a/themes/workshop/layout/_partial/_widgets/social.ejs
+++ b/themes/workshop/layout/_partial/_widgets/social.ejs
@@ -2,7 +2,7 @@
 <div class="widget-wrap">
     <h3 class="widget-title">Follow Me</h3>
     <div class="widget social-links" itemscope itemtype="http://schema.org/Organization">
-        <link itemprop="url" href="http://itsacoyoteworkshop.com">
+        <link itemprop="url" href="http://itsacoyote.design">
         <% for (var i in theme.social) { %>
             <%
                 var icon = "";
