--- a/themes/workshop/layout/_partial/after-footer.ejs
+++ b/themes/workshop/layout/_partial/after-footer.ejs
@@ -7,8 +7,8 @@
     {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "url": "http://itsacoyoteworkshop.com",
-        "logo": "http://images.itsacoyoteworkshop.com/site_assets/itsacoyote-workshop-logo-vertical.png"
+        "url": "http://itsacoyote.design",
+        "logo": "http://itsacoyote.design/site_assets/itsacoyote-workshop-logo-vertical.png"
     }
 </script>
 <script type="application/ld+json">
@@ -16,6 +16,6 @@
         "@context": "http://schema.org",
         "@type": "WebSite",
         "name": "Itsacoyote Workshop",
-        "url": "http://itsacoyoteworkshop.com"
+        "url": "http://itsacoyote.design"
     }
 </script>
