--- a/themes/workshop/layout/_partial/head.ejs
+++ b/themes/workshop/layout/_partial/head.ejs
@@ -27,7 +27,7 @@
     <% if(is_post() && page.layout === "album") {
          pageImage = theme.images + page.photos[0];
      } else {
-         pageImage = "http://images.itsacoyoteworkshop.com/site_assets/og_image.jpg";
+         pageImage = "http://itsacoyote.design/site_assets/og_image.jpg";
      } %>
         <%
             var site_url = url.replace(/index\.html$/, '');
