Point to s3 bucket directly for now

--- a/themes/workshop/layout/_partial/after-footer.ejs
+++ b/themes/workshop/layout/_partial/after-footer.ejs
@@ -8,7 +8,7 @@
         "@context": "http://schema.org",
         "@type": "Organization",
         "url": "http://itsacoyote.design",
-        "logo": "http://itsacoyote.design/site_assets/itsacoyote-workshop-logo-vertical.png"
+        "logo": "http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/itsacoyote-workshop-logo-vertical.png"
     }
 </script>
 <script type="application/ld+json">
