--- a/themes/workshop/layout/_partial/gallery-page.ejs
+++ b/themes/workshop/layout/_partial/gallery-page.ejs
@@ -49,7 +49,7 @@
     "name": "Itsacoyote Workshop",
     "logo": {
       "@type": "ImageObject",
-      "url": "http://itsacoyote.design/site_assets/itsacoyoteworkshop-logo.png",
+      "url": "http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/itsacoyoteworkshop-logo.png",
             "width": 290,
             "height": 60
     }
