--- a/themes/workshop_2/layout/_partial/footer.ejs
+++ b/themes/workshop_2/layout/_partial/footer.ejs
@@ -2,8 +2,8 @@
     <div class="footer-top">
         <div class="footer-left">
             <a href="/" title="Itsacoyote Workshop">
-                <img height="50px" src="http://s3.amazonaws.com/images.itsacoyote.design/site_assets/itsacoyoteworkshop-logo.png"  alt="Itsacoyote Workshop">
-            </a>  
+                <img height="50px" src="http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/itsacoyoteworkshop-logo.png"  alt="Itsacoyote Workshop">
+            </a>
         </div>
         <nav class="footer-nav">
             <ul class="footer-nav-menu">
@@ -16,10 +16,10 @@
                 <% } %>
             </ul>
         </nav>
-    </div>       
+    </div>
     <div class="footer-bottom">
         <div class="footer-left">
-            &copy; <%- date(Date.now(), 'YYYY') %> Itsacoyote Workshop         
+            &copy; <%- date(Date.now(), 'YYYY') %> Itsacoyote Workshop
         </div>
         <div class="footer-right">
             <% for (var i in theme.social) { %>
@@ -45,10 +45,10 @@
                         <i class="<%= icon %>"></i>
                     </a>
                 </div>
-            <% } %>  
+            <% } %>
         </div>
-    </div>         
-</footer>              
+    </div>
+</footer>
 
 <!-- Custom Code -->
 <%- js('js/main.js') %>
@@ -60,7 +60,7 @@
         "@context": "http://schema.org",
         "@type": "Organization",
         "url": "http://itsacoyote.design",
-        "logo": "http://s3.amazonaws.com/images.itsacoyote.design/site_assets/itsacoyote-workshop-logo-vertical.png"
+        "logo": "http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/itsacoyote-workshop-logo-vertical.png"
     }
 </script>
 <script type="application/ld+json">
