--- a/themes/workshop_2/layout/layout.ejs
+++ b/themes/workshop_2/layout/layout.ejs
@@ -14,16 +14,16 @@
     <%- partial('_partial/head') %>
     <body>
         <header class="main-header">
-            <div class="main-header">   
+            <div class="main-header">
                 <div class="site-logo">
                     <a href="/" title="Itsacoyote Workshop">
-                        <img src="http://s3.amazonaws.com/images.itsacoyote.design/site_assets/itsacoyoteworkshop-logo.png"  alt="Itsacoyote Workshop">
+                        <img src="http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/itsacoyoteworkshop-logo.png"  alt="Itsacoyote Workshop">
                     </a>
                 </div>
                 <%- partial('_partial/menu') %>
-            </div>       
+            </div>
         </header>
-        <main class="main-container <%- page_type %>">            
+        <main class="main-container <%- page_type %>">
             <section class="main-section">
                 <%- body %>
             </section>
