--- a/themes/workshop_2/source/css/style.styl
+++ b/themes/workshop_2/source/css/style.styl
@@ -11,7 +11,7 @@
     font-style normal
     src url(/font/RobotoSlab-Regular.ttf)
 
-* 
+*
     box-sizing: border-box
 
 body, html
@@ -28,7 +28,7 @@ a
     color: #0d83e0
 
 html
-    background url(http://s3.amazonaws.com/images.itsacoyote.design/site_assets/cork_2.jpg) top left repeat
+    background url(http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/cork_2.jpg) top left repeat
     color: rgba(0, 0, 0, 0.8)
 
 html, button, input, select, textarea,
