--- a/themes/workshop_2/layout/_partial/head.ejs
+++ b/themes/workshop_2/layout/_partial/head.ejs
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
     <meta name="msvalidate.01" content="0DEB9B3D329943664B9008FAA161DFC3" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' *.muut.com *.google-analytics.com *.googletagmanager.com *.jquery.com; img-src 'self' res.cloudinary.com s3.amazonaws.com/images.itsacoyote.design *.google-analytics.com *.akamaihd.net;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' *.muut.com *.google-analytics.com *.googletagmanager.com *.jquery.com; img-src 'self' res.cloudinary.com s3.amazonaws.com/images.itsacoyoteworkshop.com *.google-analytics.com *.akamaihd.net;">
     <meta name="google-site-verification" content="6az5s_nGwNECir-XEESpyNPNV5wGhfbHjM82jCTcXxU" />
     <meta property="op:markup_version" content="v1.0">
-    
+
 
     <meta name="theme-color" content="#dddddd">
     <meta name="mobile-web-app-capable" content="yes">
@@ -40,7 +40,7 @@
     <% if(is_post() && page.cover_index) {
          pageImage = theme.cloudinary.url + 'c_fill,g_face:center,h_157,w_300/' + page.cover_index;
      } else {
-         pageImage = "http://s3.amazonaws.com/images.itsacoyote.design/site_assets/og_image.jpg";
+         pageImage = "http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/og_image.jpg";
      } %>
 
         <%
