--- a/themes/workshop_2/layout/_partial/head.ejs
+++ b/themes/workshop_2/layout/_partial/head.ejs
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
     <meta name="msvalidate.01" content="0DEB9B3D329943664B9008FAA161DFC3" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' *.muut.com *.google-analytics.com *.googletagmanager.com *.jquery.com; img-src * 'self' res.cloudinary.com s3.amazonaws.com/images.itsacoyoteworkshop.com; *.google-analytics.com *.akamaihd.net;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' *.muut.com *.google-analytics.com *.googletagmanager.com *.jquery.com *.akamaihd.net; img-src * 'self' res.cloudinary.com s3.amazonaws.com/images.itsacoyoteworkshop.com;">
     <meta name="google-site-verification" content="6az5s_nGwNECir-XEESpyNPNV5wGhfbHjM82jCTcXxU" />
     <meta property="op:markup_version" content="v1.0">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
 
     <meta name="theme-color" content="#dddddd">
     <meta name="mobile-web-app-capable" content="yes">
