Switch to using https

--- a/themes/workshop_2/layout/_partial/head.ejs
+++ b/themes/workshop_2/layout/_partial/head.ejs
@@ -43,7 +43,7 @@
     <% if(is_post() && page.cover_index) {
          pageImage = theme.cloudinary.url + 'c_fill,g_face:center,h_157,w_300/' + page.cover_index;
      } else {
-         pageImage = "http://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/og_image.jpg";
+         pageImage = "https://s3.amazonaws.com/images.itsacoyoteworkshop.com/site_assets/og_image.jpg";
      } %>
 
         <%
